# sumit

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.svelte-kit/: ambient.d.ts
plugins/finder/: package-lock.json  package.json
plugins/finder-plugin/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
plugins/plugin/: package-lock.json  package.json
plugins/sumit-plugin-interface/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
src/: app.css  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: global_shortcuts.rs  main.rs
src/Sumit.Extension/: ComponentEntry.cs  ExampleJsInterop.cs  Extension.cs  ExtensionManifest.cs  IPlugin.cs  Sumit.Extension.csproj
src/app/: package-lock.json  package.json  svelte.config.js  tailwind.cmd  tailwind.config.js  tsconfig.json
src/app/src-tauri/: Cargo.toml  tauri.conf.json
src/app/src-tauri/capabilities/: default.json
src/app/src-tauri/src/: extension_register.rs  file_watcher.rs  global_shortcuts.rs  lib.rs  main.rs
src/app/src-tauri/src/dotnet/: mod.rs
src/app/src-tauri/src/extension/: constant.rs  extension.rs  extension_registry.rs  manager.rs  manifest.rs  mod.rs  registry.rs
src/app/src-tauri/src/watcher/: mod.rs  playload.rs
src/components/: IconButton.svelte  SearchBar.svelte  TabIcon.svelte  Utility.ts
src/lib/: index.ts
src/local/plugins/finder/: Cargo.toml
src/local/plugins/finder/.cargo/: config.toml
src/local/plugins/finder/src/: lib.rs
src/routes/: +layout.svelte  +page.svelte
(+46 files in other folders)
