[package]
name = "sumit-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sumit-app"
path = "src/main.rs"

[lib]
name = "plugit"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "protocol-asset", "unstable"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-log = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
libloading = "0.8"
log = "0.4"
anyhow = "1"
tauri-plugin-fs = "2.0.0-beta.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta.2"
