[package]
name = "finder"
version = "0.1.0"
edition = "2021"
description = "Finder plugin for sumit app"
authors = ["Mickael Correia <mickael.correia.prive@gmail.com>"]

[lib]
name = "finder"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# cargo build --release --out-dir=out -Z unstable-options

[dependencies]
log = "0.4"
anyhow = "1"
sumit-app = { path = "../../../app/src-tauri" }